CHANGE LOG / RELEASE NOTES: (Newest to Oldest)

A21.2.001.0045 :
* Added a waterproof window.

A21.2.001.0044 :
* Added 2 terrain blocks.
* Aligned cbpMatressThin to be flush with the floor.

A21.2.001.0043 :
* Added wine bottle offsets.
* Added new Game Effects.

A21.2.001.0042 :
* Fixed dance game event.
* Removed spawns for jump scare game event.
* Bookcase lootcontainer fix for hidden doors.

A21.2.001.0041 :
* Added climbable chain.
* Removed random rotations from deco book piles.
* Billboards now take more than one shot to break.
* Added game events.

A21.2.001.0040 :
* Added a new material: Sheet Metal?
* Added some blocks in the new material.

A21.2.001.0039 :
* Missing icon fixed.

A21.2.001.0038 :
* Added bowling ball offset.
* Added bookcases that disappear when looted.
* Removed random rotation of mushroom helper.
* Stallion is making all these changes, BTW. All of these versions.

A21.2.001.0037 :
* Added Rolling Bin in Pink and Black
* Rolling Bin random helper updated
* cbpPoleSquareTipCentered fixed; something about Left or Right versions

A21.2.001.0036 :
* More Plant Offsets
* Body Bag Offsets
* Tinted Fridge and Faucets

A21.2.001.0035 :
* Misc Adjustments
* Offset Windows

A21.2.001.0034 :
* Turned off Pickup feature for potted plants that look like garden plants
* Removed All grass types from mushroom helper
* Added cbpBinTrashRollingRandomHelper for a random rolling bin
* Addeed cbpAllPileRandomHelper: like lootrandomhelper but wont leave missing textures
* Added cbpUmbrellaTableDownCorner and cbpUmbrellaTableUpCorner variants

A21.2.001.0033 :
* Offset handtruck [so it fits under pallets and crates etc]
* Fixed duplicate blocks [cbpHardAirShock & cbpHardAirShockLight] was in twice
* Added terrstone that disables zombies spawns
* Added 16 Gravestones with game events [tfp examples]
* Added cbpStoreElectronicsBookShelfSpeaker2Left_rotate
* Added cbpStoreElectronicsBookShelfSpeaker2Right_rotate