@@ -1082,6 +1082,7 @@ cbpWineBottleCornerOffset,blocks,Block,,,Wine Bottle Corner Offset,,
 cbpTerrOre,blocks,Terrain,,,CBP Oil Deposit,,
 cbpTerrOreCoal,blocks,Terrain,,,CBP Coal Deposit,,
 cbpMattressFlat,blocks,Block,,X,Mattress Flat,,
+cbpCubeHalfConfessionalOffset,blocks,Block,,X,Cube Half Confessional Offset,,
 cbpWindowStoreOneSidedFullNWL,shapes,Block,,,Window Store One Sided NWL,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
